# dash-contabil

./: .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  docker-compose.yml  first_figure.html  handle_pdf.py  main.py  old_main.py  output.csv  plotting.py  pyproject.toml  test_sidebar.py
assets/: style.css
src/: __init__.py  config.py  handle_pdf.py  main.py  password.py
src/assets/: style.css
src/components/: dropdown.py  dropdown_many.py  esc_dropdown.py  ids.py  layout.py  nation_dropdown.py  old_esc_dropdown.py  sidebar.py  upload.py
src/components/dre/: __init__.py  dre_despesas.py  tab_despesas.py  tab_impostos.py  tab_info.py  tab_receitas.py
src/data/: data_initial.py
src/database/: __init__.py  code.py  crud.py  database.py  model.py  model_sql.py  models.py  schemas.py  test.db
src/pages/: __init__.py  admin.py  analise.py  config.py  dre.py  home.py  login.py
src/plot/: __init__.py  bar.py  line.py  pie.bar  pie.py  plotting.py
