[tool.poetry]
name = "app-pdf"
version = "0.1.0"
description = ""
authors = ["hotratx <mgviero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.9.0"
tabula-py = "^2.4.0"
bokeh = "^2.4.3"
plotly = "^5.9.0"
pydantic = "^1.9.1"
dash = "^2.6.1"
dash-bootstrap-components = "^1.2.1"
Flask-Login = "^0.6.2"
black = "^22.6.0"
passlib = "^1.7.4"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.40"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
